src/main/default/objects/DHM_Job_Log__c/DHM_Job_Log__c.object-meta.xml
<CustomObject>
    <label>DHM Job Log</label>
    <nameField>
        <displayFormat>DHM Job {000000}</displayFormat>
        <label>DHM Job Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHM Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>