src/main/default/objects/DHM_Job_Log__c/fields/Apex_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apex Job Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>