src/main/default/objects/DHM_Job_Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>