src/main/default/objects/DHM_Job_Log__c/fields/Candidates_Found__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Found__c</fullName>
    <label>Candidates Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>