src/main/default/objects/DHM_Job_Log__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>