src/main/default/objects/DHM_Job_Log__c/fields/Extended_Status__c.field-meta.xml
<CustomField>
    <fullName>Extended_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extended Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>