src/main/default/objects/DHM_Job_Log__c/fields/Job_Items_Processed__c.field-meta.xml
<CustomField>
    <fullName>Job_Items_Processed__c</fullName>
    <label>Job Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>