src/main/default/objects/DHM_Job_Log__c/fields/Max_Merges__c.field-meta.xml
<CustomField>
    <fullName>Max_Merges__c</fullName>
    <label>Maximum Merges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>