src/main/default/objects/DHM_Job_Log__c/fields/Merges__c.field-meta.xml
<CustomField>
    <fullName>Merges__c</fullName>
    <label>Merges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>