src/main/default/objects/DHM_Job_Log__c/fields/Perform_Merge__c.field-meta.xml
<CustomField>
    <fullName>Perform_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perform Merge</label>
    <type>Checkbox</type>
</CustomField>