src/main/default/objects/DHM_Job_Log__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>