src/main/default/objects/DHM_Job_Log__c/fields/Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>Records_Updated__c</fullName>
    <label>Records Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>