src/main/default/objects/DHM_Job_Log__c/fields/Source_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Object Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>