src/main/default/objects/DHM_Job_Log__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>