src/main/default/objects/DHM_Job_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Status</label><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Started</fullName><default>false</default><label>Started</label></value>
        <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        <value><fullName>Completed with Errors</fullName><default>false</default><label>Completed with Errors</label></value>
        <value><fullName>Stopped - Merge Limit</fullName><default>false</default><label>Stopped - Merge Limit</label></value>
        <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        <value><fullName>Aborted</fullName><default>false</default><label>Aborted</label></value>
    </valueSetDefinition></valueSet>
</CustomField>