src/main/default/objects/DHM_Job_Log__c/fields/Total_Job_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Items__c</fullName>
    <label>Total Job Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>